--- a/contract/Move.toml
+++ b/contract/Move.toml
@@ -10,12 +10,20 @@ authors = []
 # platform_creator_addr = "_" 
 # marketplace_addr = "_"
 
+[dev-addresses]
+launchpad_addr = "0x1234"
+initial_creator_addr = "0x5678"
+minter = "0x9abc"
+platform_creator_addr = "0xdef0" 
+marketplace_addr = "0x4321"
+
 [addresses]
-launchpad_addr = "0x123"
-initial_creator_addr = "0x234"
-minter = "0x345"
-marketplace_addr = "0x456"
-platform_creator_addr = "0x567"
+launchpad_addr = "0x1234"
+initial_creator_addr = "0x5678"
+minter = "0x9abc"
+marketplace_addr = "0x4321"
+platform_creator_addr = "0xdef0"
+
 
 [dependencies]
 AptosFramework = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "mainnet", subdir = "aptos-move/framework/aptos-framework" }
