--- a/contract/Move.toml
+++ b/contract/Move.toml
@@ -18,11 +18,11 @@ platform_creator_addr = "0xdef0"
 marketplace_addr = "0x4321"
 
 [addresses]
-launchpad_addr = "0x1234"
-initial_creator_addr = "0x5678"
-minter = "0x9abc"
-marketplace_addr = "0x4321"
-platform_creator_addr = "0xdef0"
+launchpad_addr = "_"
+initial_creator_addr = "_"
+minter = "_"
+marketplace_addr = "_"
+platform_creator_addr = "_"
 
 
 [dependencies]
