--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "dependencies": {
     "@aptos-labs/ts-sdk": "^1.30.0",
     "@aptos-labs/wallet-adapter-react": "^3.7.4",
+    "@chakra-ui/react": "^2.10.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^3.10.0",
     "@irys/web-upload": "^0.0.12",
     "@irys/web-upload-aptos": "^0.0.12",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -44,7 +48,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.1",
@@ -63,14 +68,14 @@
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "postcss": "^8.4.38",
+    "prettier": "^3.3.2",
     "stream-browserify": "^3.0.0",
     "tailwindcss": "^3.4.3",
     "tree-kill": "1.2.2",
     "typescript": "^5.2.2",
+    "vercel": "^35.2.4",
     "vite": "^5.2.0",
     "vite-plugin-node-polyfills": "^0.21.0",
-    "vite-plugin-notifier": "^0.1.5",
-    "prettier": "^3.3.2",
-    "vercel": "^35.2.4"
+    "vite-plugin-notifier": "^0.1.5"
   }
 }
